--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="sass.html">競技</a></li>
                     <li><a href="badges.html">選手</a></li>
-                    <li><a href="collapsible.html">競技アニメ</a></li>
+                    <li><a href="test3.html">競技アニメ</a></li>
                 </ul>
             </div>
         </nav>
@@ -37,7 +37,6 @@
                             <img src="img/news03.jpg">
                             <!-- random image -->
                         </li>
-
                     </ul>
                 </div>
             </div>
@@ -161,7 +160,6 @@
                 </ol>
             </div>
         </div>
-
         <div class="row margin-top-6ps margin-reset padding-bottom-6ps">
             <div class="col offset-l1 l10">
                 <ul class="tabs">
@@ -190,7 +188,8 @@
                         <p><a href="#test1">水球やったった。</p>
             </div>
             <div class="card-action">
-              <a href="waterpolo.html">競技ページへ</a><br>
+              <a href="waterpolo.html">競技ページへ</a>
+                            <br>
                     </div>
                     <div class="label">
                     </div>
